# inventory-share-plugin

./: LICENSE  READEME.md  README.md  README_JP.md  create_db.sql  pyproject.toml
src/endstone_inventory_share_plugin/: __init__.py  config.toml  inventory_share_plugin.py
