[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-inventory-share-plugin"
version = "1.2.1"
description = "Multi server inventory share plugin"
dependencies = [
    "PyMySQL",
    "pycryptodome"
]

[project.entry-points."endstone"]
inventory-share-plugin = "endstone_inventory_share_plugin:InventorySharePlugin"